--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,10 +2,10 @@ version: 0.2
 
 env:
   secrets-manager:
-    ACCOUNT_ID: "myapp/build-env:ACCOUNT_ID"
-    IMAGE_REPO_NAME: "myapp/build-env:IMAGE_REPO_NAME"
-    AWS_DEFAULT_REGION: "myapp/build-env:AWS_DEFAULT_REGION"
-    CONTAINER_NAME: "myapp/build-env:CONTAINER_NAME"
+    ACCOUNT_ID: "tc-three-tier-app_frontend:ACCOUNT_ID"
+    IMAGE_REPO_NAME: "tc-three-tier-app_frontend:IMAGE_REPO_NAME"
+    AWS_DEFAULT_REGION: "tc-three-tier-app_frontend:AWS_DEFAULT_REGION"
+    CONTAINER_NAME: "tc-three-tier-app_frontend:CONTAINER_NAME"
 
 phases:
   pre_build:
