--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Build and Push Frontend
       uses: docker/build-push-action@v5
       with:
-        context: ./react-app
+        context: .
         push: true
         tags: |
           ${{ secrets.DOCKER_USERNAME }}/frontend:latest
