--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,33 +1,19 @@
 version: 0.2
 
-env:
-  secrets-manager:
-    ACCOUNT_ID: "tc-three-tier-app_frontend:ACCOUNT_ID"
-    IMAGE_REPO_NAME: "tc-three-tier-app_frontend:IMAGE_REPO_NAME"
-    AWS_DEFAULT_REGION: "tc-three-tier-app_frontend:AWS_DEFAULT_REGION"
-    CONTAINER_NAME: "tc-three-tier-app_frontend:CONTAINER_NAME"
-
 phases:
   pre_build:
     commands:
-      - echo "ACCOUNT_ID=$ACCOUNT_ID, REGION=$AWS_DEFAULT_REGION"
-      - REPOSITORY_URI=$ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $REPOSITORY_URI
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REPO
   build:
     commands:
-      - echo "Building Docker image..."
-      - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - echo Building the frontend Docker image...
+      - docker build -t $ECR_REPO:latest .
+      - docker push $ECR_REPO:latest
   post_build:
     commands:
-      - echo "Pushing images..."
-      - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - echo "Frontend image pushed: $ECR_REPO:latest"
 
 artifacts:
   files:
-    - imagedefinitions.json
+    - '**/*'
