--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,18 +1,27 @@
 version: 0.2
 
+env:
+  variables:
+    IMAGE_TAG: latest
+
 phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REPO
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - IMAGE_TAG=$COMMIT_HASH
   build:
     commands:
       - echo Building the frontend Docker image...
       - docker build -t $ECR_REPO:latest .
-      - docker push $ECR_REPO:latest
+      - docker tag $ECR_REPO:latest $ECR_REPO:$IMAGE_TAG
   post_build:
     commands:
-      - echo "Frontend image pushed: $ECR_REPO:latest"
+      - echo Pushing Docker images...
+      - docker push $ECR_REPO:latest
+      - docker push $ECR_REPO:$IMAGE_TAG
+      - echo "Frontend image pushed: $ECR_REPO:$IMAGE_TAG"
 
 artifacts:
   files:
